<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ItemTaskActivity">

        <CheckBox
            android:id="@+id/checkBoxSexta7"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:checked="false"
            android:text="@string/check_box_sexta"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/checkBoxSexta6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSexta" />

        <CheckBox
            android:id="@+id/checkBoxSexta5"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:checked="false"
            android:text="@string/check_box_quinta"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/checkBoxSexta4"
            app:layout_constraintTop_toBottomOf="@+id/repetir_lembrete" />

        <CheckBox
            android:id="@+id/checkBoxSexta4"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:checked="false"
            android:text="@string/check_box_quarta"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/checkBoxSexta3"
            app:layout_constraintTop_toBottomOf="@+id/repetir_lembrete" />

        <CheckBox
            android:id="@+id/checkBoxSexta3"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:checked="false"
            android:text="@string/check_box_terca"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/checkBoxSexta2"
            app:layout_constraintTop_toBottomOf="@+id/repetir_lembrete" />

        <CheckBox
            android:id="@+id/checkBoxSexta2"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:checked="false"
            android:text="@string/check_box_segunda"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/checkBoxSexta"
            app:layout_constraintTop_toBottomOf="@+id/repetir_lembrete" />

        <CheckBox
            android:id="@+id/checkBoxSexta"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:checked="false"
            android:text="@string/check_box_domingo"
            android:textColor="#339742"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repetir_lembrete" />

        <CheckBox
            android:id="@+id/checkBoxSexta6"
            android:layout_width="50dp"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:checked="false"
            android:text="@string/check_box_sabado"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/checkBoxSexta7"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSexta2" />

        <TextView
            android:id="@+id/repetir_lembrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/repetir_lembrete"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hora" />

        <Button
            android:id="@+id/hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/add_lembrete"
            android:backgroundTint="#339742"
            android:textColor="#fff"
            android:onClick="showTimePickerDialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_lembrete"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/descricao_tarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/descricao_hint"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.843"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipo_tarefa_spinner" />

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="132dp"
            android:layout_marginRight="132dp"
            android:gravity="center_horizontal"
            android:text="@string/new_task"
            android:textAlignment="center"
            android:textColor="#339742"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/nome_nova_tarefa_hint"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSelecionarTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/selecionar_tipo"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo" />

        <Spinner
            android:id="@+id/tipo_tarefa_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSelecionarTipo" />


        <Button
            android:id="@+id/button_add_tarefa"
            android:layout_width="201dp"
            android:layout_height="50dp"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:onClick="onClickAdicionarTarefa"
            android:text="@string/adicionar_nova_tarefa_btn"
            android:textColor="#339742"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSexta6"
            app:layout_constraintVertical_bias="0.375" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="201dp"
            android:layout_height="50dp"
            android:layout_marginTop="13dp"
            android:visibility="invisible"
            android:background="@drawable/button_login"
            android:backgroundTint="@android:color/holo_red_dark"
            android:onClick="onClickDeleteTask"
            android:text="Deletar Tarefa"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_add_tarefa" />

        <TextView
            android:id="@+id/label_lembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/lembrete"
            android:textSize="14dp"
            android:textColor="#000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descricao_tarefa" />

        <TextView
            android:id="@+id/lembrete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:text="Nenhum Lembrete"
            android:textSize="14dp"
            android:textColor="#000"
            app:layout_constraintTop_toBottomOf="@+id/descricao_tarefa"
            app:layout_constraintLeft_toRightOf="@id/label_lembrete"
            tools:layout_editor_absoluteX="40dp" />

        <TextView
            android:id="@+id/task_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
